--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,2 @@
 <h1>URL Shortener</h1>
-<img src="../public/img/pic1.jpg" alt="Not Found">
+<img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="Not Found">
